review 4.6 Analysis of the partitioning problem using

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -546,7 +546,7 @@ while(isRunning(pid)){
 \label{Analysis-of-the-partitioning-problem-using-vZ}
 %----------------------------------------------
 
-Algorithm of Figure~\ref{vZ-pseudocode} encodes the objective function and constraints related to the HW-SW partitioning problem using $\nu$Z functions, as seen in~\cite{Bjorner2014}. A $\nu$Z logical context must firstly be created (line $2$), in order to add constraints and to check whether a given model exists to the set of constraints. Note that the number of nodes and edges, software, hardware, and communications costs as well as the incidence matrix E must also be declared.
+Algorithm of Figure~\ref{vZ-pseudocode} encodes the objective function and constraints related to the HW-SW partitioning problem using $\nu$Z functions, as described in~\cite{Bjorner2014}. A $\nu$Z logical context must firstly be created (line $2$), in order to add constraints and to check whether a given model exists to the constraints set. Note that the number of nodes and edges, software, hardware, and communications costs as well as the incidence matrix E must also be declared.
 
 The arithmetic expressions from lines $10$ to $12$ represent the constraints described in Eq.~\eqref{hw-sw-partitioning}. Here, variable \textit{SC} refers to the software cost, \textcolor{blue}{while \textit{CMC} denotes the communication cost}. In line $12$, the \textit{Fobj} (objective function) is declared, which denotes the product between the hardware cost and the decision variables vector, which contains only Boolean values. \textit{Fobj} should be minimized to obtain the optimal hardware solution. To achieve this, two constraints are imposed to ESBMC-$\nu$Z: the first one refers to the sum of the software and communication costs, where the result should be less than $S_0$; and the second one instructs to ESBMC-$\nu$Z that \textit{Fobj} should be minimized. Finally, the model is checked by ESBMC-$\nu$Z and if there is a solution that 
 meets the constraints, then the \textit{Fobj} value is provided.
