--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -576,7 +576,7 @@ meets the constraints, then the \textit{Fobj} value is provided.
 \label{Experimental-Evaluation}
 %----------------------------------------------
 
-This section is split into three parts. The setup is described in Section~\ref{Experimental-Setup}, while Section~\ref{Benchmarks-Description} describes all benchmarks that were used for performing the experimental evaluation. Section~\ref{Experimental-Results} reports a comparison among MATLAB, ESBMC-SS, ESBMC-PS, ESBMC-PB, and ESBMC-$\nu$Z using a set of standard HW-SW partitioning benchmarks, as \textcolor{blue}{presented by}~\cite{Mann2007}.
+This section is split into three parts. The setup is described in Section~\ref{Experimental-Setup}, while Section~\ref{Benchmarks-Description} describes all benchmarks that were used for performing the experimental evaluation. Section~\ref{Experimental-Results} reports a comparison among MATLAB, ESBMC, ESBMC-SS, ESBMC-PS, ESBMC-PB, and ESBMC-$\nu$Z using a set of standard HW-SW partitioning benchmarks, as \textcolor{blue}{presented by}~\cite{Mann2007}.
 
 %----------------------------------------------
 \subsection{Experimental Setup}
