review 5.2 Description of Benchmarks

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -627,8 +627,7 @@ Based on the \textcolor{blue}{mean,} standard deviation and tolerance interval t
 \bigskip
 \end{minipage}
 
-\vspace{-3 mm}
-To perform the experiments, some benchmarks provided by~\cite{Mann2007} were used, as shown in Table~\ref{tab:Description-of-Benchmarks}. The nodes in the graphs correspond to high-level language instructions. Software and communication costs are time dimensional, i.e., running time of software and the communication time, and hardware costs represent the occupied area. The first three benchmarks are extracted from MiBench, as \textcolor{blue}{presented by}~\cite{Guthaus2001}. \textcolor{blue}{The fuzzy benchmark was created and presented by}~\cite{Mann2007} and is a significantly large benchmark. \textcolor{blue}{And also from ~\cite{Mann2007}, were used RC$6$ and Mars as very complex benchmarks to test the limits of the applicability of each technique. Note that we used the same number (and types) of benchmarks from the literature, in order to enable a fair comparison to other existing techniques presented in this study.}
+To perform the experiments, some benchmarks provided by~\cite{Mann2007} were used, as shown in Table~\ref{tab:Description-of-Benchmarks}. The nodes in the graphs correspond to high-level language instructions. Software and communication costs are time dimensional, {\it i.e.}, software execution time and communication time; and hardware costs represent the occupied area. The first three benchmarks are extracted from MiBench, as \textcolor{blue}{presented by}~\cite{Guthaus2001}. \textcolor{blue}{The fuzzy benchmark was created and presented by}~\cite{Mann2007} and is a significantly large benchmark. \textcolor{blue}{And also from ~\cite{Mann2007}, were used RC$6$ and Mars as very complex benchmarks to test the limits of each technique. Note that we used the same number (and types) of benchmarks that were previously used in the literature, in order to enable a fair comparison to other existing techniques presented in this study.}
 
 %----------------------------------------------
 \subsection{Experimental Results}
